--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,4 +43,6 @@ dependencies {
 
     //SearchableSpinner
     compile 'com.toptoche.searchablespinner:searchablespinnerlibrary:1.3.1'
+
+    compile 'com.github.florent37:materialtextfield:1.0.7'
 }
