--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'com.android.application'
 apply plugin: 'com.jakewharton.butterknife'
+apply plugin: 'realm-android'
 
 android {
     compileSdkVersion 25
@@ -44,5 +45,6 @@ dependencies {
     //SearchableSpinner
     compile 'com.toptoche.searchablespinner:searchablespinnerlibrary:1.3.1'
 
+    //MaterialTextField
     compile 'com.github.florent37:materialtextfield:1.0.7'
 }
