--- a/gradle.properties
+++ b/gradle.properties
@@ -12,4 +12,12 @@
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
-#Mon Feb 06 10:34:15 BOT 2017
+#Wed Feb 08 08:18:00 BOT 2017
+systemProp.http.proxyPassword=Clave789123
+systemProp.https.proxyUser=mvaldez
+systemProp.https.proxyPort=8080
+systemProp.http.proxyHost=10.10.110.251
+systemProp.https.proxyPassword=Clave789123
+systemProp.https.proxyHost=10.10.110.251
+systemProp.http.proxyUser=mvaldez
+systemProp.http.proxyPort=8080
